<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rodrigo.perez@urjc.es">rod</maintainer>
  <maintainer email="juancarlos.serrano@urjc.es">Juanca</maintainer>
  <maintainer email="albertogarciagomezjacinto@gmail.com">Alberto</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>navigation_system_interfaces</depend>
  
  <depend>attention_system</depend>
  <depend>attention_system_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/clear_people_layer.xml" />
	  <build_type>ament_cmake</build_type>
  </export>

  
</package>
